# luafcgi

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  config-example.cfg  install_dependencies.sh
examples/: README.md  index.lua  lua.lua  luafcgi.lua  server.lua  server_info.lua
src/: lua-fcgi.c  lua-fcgi.h  luafcgi.c  luafcgi.h  main.c
src/functions/: get.c  get.h  print.c  print.h  server.c  server.h  server_info.c  server_info.h  url.c  url.h
src/luafcgi/: luafcgi.c  luafcgi.h  master.c  master.h  worker.c  worker.h
src/luafcgi/functions/: server.c
